changed cart-service repo, handler and api to use the jwt which take different user
